--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-:root{
+:root {
   --bs-box-shadow: 0px 0px 40px rgba(29, 58, 83, 0.15);
 }
-body{
+
+body {
   background-color: #fff;
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: normal;
   margin: 0;
   padding: 0;
+}
+.container {
+
+  height: 100vh;
+  padding: 0.625rem;
+
 }
 
 .header {
@@ -18,28 +25,26 @@ body{
   padding: 1rem;
   text-align: center;
 }
+
 .navigation {
   display: flex;
   gap: 1rem;
+  width: 100% ;
   text-align: center;
   justify-content: center;
   padding: 0.625rem 0;
-    border-radius: 0.625rem;
-  background-color:rgb(230 240 249);
-  
+  border-radius: 0.625rem;
+  background-color: rgb(230, 240, 249);
 }
 
 .navigation a {
   cursor: pointer;
-  
   color: #0a519c;
   text-decoration: none;
   padding: 0.625rem 1.25rem;
   border-radius: 0.625rem;
   transition: background-color 0.8s, color 0.8s, transform 0.8s ease-in;
-
 }
-
 
 .navigation a:not(.active):hover {
   background-color: #0a519c;
@@ -54,32 +59,56 @@ body{
 }
 
 .App {
-  
-  padding: 1rem;
+ width: 100%;
 }
 
 h2 {
   color: #0a519c;
 }
+
 .course-card {
   border: 1px solid #ddd;
   border-radius: 5px;
   padding: 1rem;
   text-align: center;
-  width: 390px;
+  width: calc(50% - 2rem); 
+  max-width: 400px; 
   background-color: #fff;
   margin: 1rem;
   box-shadow: var(--bs-box-shadow);
   display: inline-block;
+}
+
+.course-card h3 {
+  font-size: 1.2rem; /* Adjust font size for responsiveness */
+  font-weight: 400;
+}
+
+.course-image {
+  width: 100%;
+  max-height: 200px; /* Ensure responsiveness */
+  border-radius: 5px;
+}
+
+@media (max-width: 768px) {
+  .navigation a{
+    font-size: 13px;
+    padding: 5px !important;
+    
+    
+  }
+  .course-card {
+    width: 78%;
+  }
+  .navigation {
+    display: grid;
+    gap: 0 !important;
+    grid-template-columns: repeat(2, 1fr);
+    border-radius: 0 !important;
+    
+  }
 
   
 }
-.course-card h3{
-  font-size: 15px;
-  font-weight: 400;
-}
-.course-image {
-  width: 100%;
-  height: 200px;
-  border-radius: 5px;
-}
+
+
